Release 1.2.7 (#277)
* Definición de columnas anotattion

* Obtener Fields con y sin anotaciones merge

* Creación metodos para obtener metadatos

* Adecuación metodos createTable, SaveModel y Refresh

* Adecuación metodos createTable, SaveModel y Refresh

* Adecuación Final modelos nueva nomenclatura

* Adecuación Final modelos nueva nomenclatura Completa, test 100 Por Ciento Pased

* Adecuación De Test

* Adecuación covertura de Test

* Refactorización de codigo JBSQLUTILS 1.2.3

* Release 1.2.3

* Correccion Error getDataBaseType

* Correccion Error getDataBaseType

* Implementación de metodo firstOrFailGet

* Release 1.2.4

* Release 1.2.4

* [Changelog CI] Add Changelog for Version 1.2.4

* Actualización servicios Docker

* Manejo de errores datos sensibles, datos que no

* Release 1.2.5

* [Changelog CI] Add Changelog for Version 1.2.5

* Release 1.2.6

Release 1.2.6, actualización de dependencias, adecuación de getconection, para permitir omitir el nombre de la BD's y del servidor

* [Changelog CI] Add Changelog for Version 1.2.6

* Envío de Dll's Temporal

* Adecuación uso de claves foraneas

* Adecuación uso de claves foraneas

* Adecuación uso de hilos virtuales

* Adecuación uso de hilos virtuales sin usar variables estaticas

* Date Adapter inicial

* Date Adapter Seguro en procesos multi hilos

* Adecuación visibilidad modelos

* Reformateo de codigo

* [Changelog CI] Add Changelog for Version 1.2.7

* Actualización maven compiler

* Actualización entorno github

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Jose Bran <jobran@gtc.com.gt>
Co-authored-by: Jose Bran <jobran@domcoin.net>